--- a/specification/devtestlabs/resource-manager/Microsoft.DevTestLab/stable/2021-09-01/examples/ServiceFabrics_ListApplicableSchedules.json
+++ b/specification/devtestlabs/resource-manager/Microsoft.DevTestLab/stable/2021-09-01/examples/ServiceFabrics_ListApplicableSchedules.json
@@ -11,7 +11,6 @@
     "200": {
       "body": {
         "id": "/subscriptions/{subscriptionId}/resourceGroups/resourceGroupName/providers/Microsoft.DevTestLab/labs/{labName}/schedules/{scheduleName}",
-        "location": "{location}",
         "name": "{scheduleName}",
         "properties": {
           "labVmsShutdown": {
@@ -47,11 +46,8 @@
             },
             "id": "/subscriptions/{subscriptionId}/resourcegroups/resourceGroupName/providers/microsoft.devtestlab/labs/{labName}/schedules/{scheduleName}",
             "name": "{scheduleName}",
-            "type": "Microsoft.DevTestLab/labs/schedules",
             "location": "{location}",
-            "tags": {
-              "tagName1": "tagValue1"
-            }
+            "type": "Microsoft.DevTestLab/labs/schedules"
           },
           "labVmsStartup": {
             "properties": {
@@ -86,17 +82,11 @@
             },
             "id": "/subscriptions/{subscriptionId}/resourcegroups/resourceGroupName/providers/microsoft.devtestlab/labs/{labName}/schedules/{scheduleName}",
             "name": "{scheduleName}",
-            "type": "Microsoft.DevTestLab/labs/schedules",
             "location": "{location}",
-            "tags": {
-              "tagName1": "tagValue1"
-            }
+            "type": "Microsoft.DevTestLab/labs/schedules"
           }
         },
-        "type": "{scheduleType}",
-        "tags": {
-          "tagName1": "tagValue1"
-        }
+        "type": "{scheduleType}"
       }
     }
   }
