--- a/specification/app/resource-manager/Microsoft.App/stable/2022-03-14/examples/AuthConfigs_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2022-03-14/examples/AuthConfigs_CreateOrUpdate.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "workerapps-rg-xj",
     "containerAppName": "testcanadacentral",
     "name": "current",
-    "api-version": "2022-01-01-preview",
+    "api-version": "2022-03-14",
     "authConfigEnvelope": {
       "properties": {
         "state": "Enabled",
