--- a/specification/app/resource-manager/Microsoft.App/preview/2021-03-16/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2021-03-16/ContainerApps.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "2022-01-01-preview",
+    "version": "2021-03-16",
     "title": "ContainerApps API Client"
   },
   "host": "management.azure.com",
