--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/stable/2021-12-17/examples/Apps_List.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/stable/2021-12-17/examples/Apps_List.json
@@ -1,6 +1,6 @@
 {
   "parameters": {
-    "api-version": "2020-11-01-preview",
+    "api-version": "2021-12-17",
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "myResourceGroup",
     "serviceName": "myservice"
