--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/stable/2021-12-17/examples/MonitoringSettings_UpdatePut.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/stable/2021-12-17/examples/MonitoringSettings_UpdatePut.json
@@ -7,7 +7,7 @@
         "appInsightsSamplingRate": 10.0
       }
     },
-    "api-version": "2020-11-01-preview",
+    "api-version": "2021-12-17",
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "myResourceGroup",
     "serviceName": "myservice"
