--- a/specification/authorization/resource-manager/Microsoft.Authorization/preview/2022-06-02/examples/ValidateRoleAssignmentScheduleRequestByName.json
+++ b/specification/authorization/resource-manager/Microsoft.Authorization/preview/2022-06-02/examples/ValidateRoleAssignmentScheduleRequestByName.json
@@ -20,7 +20,7 @@
         "conditionVersion": "1.0"
       }
     },
-    "api-version": "2022-04-01-preview"
+    "api-version": "2022-06-02"
   },
   "responses": {
     "200": {
